--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -221,6 +221,15 @@ $font-size-base: 10px;
 .normal{
   font-weight: normal;
 }
+.mask{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: 9;
+}
 .block {
   display: block !important;
 }
