--- a/src/styles/widget/warehouse.scss
+++ b/src/styles/widget/warehouse.scss
@@ -66,4 +66,11 @@
     margin-bottom: 10px;
   }
 
+  .outViewDialog{
+    .el-form-item{
+      width: 33%;
+      margin-right: 0;
+    }
+  }
+
 }
