--- a/src/common/style/color.scss
+++ b/src/common/style/color.scss
@@ -9,6 +9,18 @@ $gray10:#909399;
 //占位文字
 $gray11:#C0C4CC;
 
+//一级边框
+$gray12:#DCDFE6;
+
+//二级边框
+$gray13:#E4E7ED;
+
+//三级边框
+$gray14:#EBEEF5;
+
+//四级边框
+$gray15:#F2F6FC;
+
 //红色
 $red01:#F56C6C;
 //蓝色
