--- a/src/styles/widget/warehouse.scss
+++ b/src/styles/widget/warehouse.scss
@@ -1,6 +1,22 @@
 .warehouse{
   padding: 10px;
   background: $white01;
+  //库存分布
+  .dialogProduct{
+    padding: 1%;
+    border: 1px solid $gray15;
+    .productImg{
+      width: 50px;
+      height: 50px;
+      margin-right: 5px;
+    }
+    .el-col{
+      display: flex;
+      align-items: center;
+      height: 50px;
+    }
+  }
+
   //出库单
   .out_btn{
     padding: 10px;
@@ -9,7 +25,7 @@
     padding: 10px;
     background: $gray06;
     .el-form-item{
-      margin-bottom: 0;
+      //margin-bottom: 0;
     }
   }
   //仓库管理
@@ -70,6 +86,15 @@
     .el-form-item{
       width: 33%;
       margin-right: 0;
+    }
+  }
+  .printView{
+    max-width: 1100px;
+    margin: 0 auto;
+  }
+  .deliveryScreen{
+    .el-select{
+      width: 180px;
     }
   }
 
