--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -27,7 +27,8 @@ ul{
   margin: 0;
 }
 img{
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -704,7 +705,7 @@ h2{
     padding: 0;
     a{
       display: block;
-      width: 100px;
+      //width: 80px;
       padding-left: 20px;
     }
   }
